# anima-lora-trainer

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  VENDOR_LICENSES.md  docker-compose.yml  pyproject.toml  requirements-cpu.txt  requirements-cuda.txt  requirements-xpu.txt
configs/: default.toml
docker/: start.sh
src/anima_trainer/: __init__.py  autotag.py  cli.py  config.py  dataset.py  device.py  encoders.py  flow.py  lora.py  model.py  train.py  webui.py
tests/: test_anima_dit.py  test_autotag.py  test_config.py  test_device.py  test_flow.py  test_lora_targets.py
